--- a/css-grid.html
+++ b/css-grid.html
@@ -10,7 +10,9 @@
         body {
             display: grid;
             grid-template-columns: 2fr 1fr;
-            grid-template-rows: 100px 1fr 100px;
+            grid-template-rows: 25% 1fr 25%;
+            width: 100%;
+        
         }
 
         h2 {
@@ -18,6 +20,7 @@
             align-items: center;
             justify-content: center;
             padding: 30px 0px 30px;
+            font-size: 2vw;
 
         }
 
@@ -47,11 +50,13 @@
         }
 
         .all {
+            width: 95%;
             display: grid;
-            grid-template-columns: repeat(2, 300px);
+            grid-template-columns: repeat(2, 1fr);
             grid-template-rows: repeat(2, 1fr);
             gap: 30px;
             padding: 10px;
+            
 
         }
 
@@ -72,6 +77,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            font-size: 1,5vw;
 
         }
 
@@ -93,8 +99,11 @@
 
         .section {
             background-color: rgb(113, 113, 182);
-            padding: 20px 10px;
-            margin: 20px;
+            text-align: center;
+            display: grid;
+            align-items: center;
+            margin: 10px;
+            font-size: 1,5vw;
         }
     </style>
 </head>
